--- a/views/index.ejs
+++ b/views/index.ejs
@@ -57,8 +57,8 @@
 
         <section class="about" id="about">
             <!-- <img class="about__image" src="/resources/img/about.png" alt="about_photo" /> -->
-            <h2 class="heading-2 title">About Me</h2>
-            <div class="underline">&mdash;</div>
+            <h2 class="heading-2 title mb-sm">About Me</h2>
+            <div class="underline mb-sm">&mdash;</div>
             <p class="about__paragraph">
                 My name is Rituraj Dutta and I am a Web Developer.<br />I began
                 my journey in web development from the online courses.<br />I
@@ -71,8 +71,8 @@
         </section>
 
         <section class="skills" id="skills">
-            <h2 class="heading-2 title">My Skills</h2>
-            <div class="underline">&mdash;</div>
+            <h2 class="heading-2 title mb-sm">My Skills</h2>
+            <div class="underline mb-sm">&mdash;</div>
 
             <div class="skills__grid">
                 <img src="/resources/skills/html.png" alt="html5 logo" />
@@ -92,8 +92,8 @@
         </section>
 
         <section class="services" id="services">
-            <h2 class="heading-2 title mb-md">My Services</h2>
-            <div class="underline mb-hg">&mdash;</div>
+            <h2 class="heading-2 title mb-sm">What I Can Do</h2>
+            <div class="underline mb-sm">&mdash;</div>
 
             <div class="service">
                 <i class="fas fa-paint-brush"></i>
@@ -155,8 +155,8 @@
         </section>
 
         <section class="projects" id="projects">
-            <h2 class="heading-2 title">Projects</h2>
-            <div class="underline">&mdash;</div>
+            <h2 class="heading-2 title mb-sm">Projects</h2>
+            <div class="underline mb-sm">&mdash;</div>
 
             <!-- <div class="projects__btn"> -->
             <button onclick="toggleProjects(1)" class="projects__btn">
@@ -566,8 +566,8 @@
         </section>
 
         <section class="contact" id="contact">
-            <h2 class="heading-2 title">Contact</h2>
-            <div class="underline">&mdash;</div>
+            <h2 class="heading-2 title mb-sm">Contact</h2>
+            <div class="underline mb-sm">&mdash;</div>
             <ul class="contact__list">
                 <li>
                     <a
