--- a/public/stylesheets/css/style.comp.css
+++ b/public/stylesheets/css/style.comp.css
@@ -556,10 +556,10 @@ body {
   .contact__form {
     display: grid;
     grid-gap: 3rem;
-    padding: 0 20%; }
+    width: 60%; }
     @media only screen and (max-width: 28.125em) {
       .contact__form {
-        padding: 0% 10%; } }
+        width: 40rem; } }
     .contact__form input,
     .contact__form textarea {
       border-radius: 25px;
