--- a/public/stylesheets/sass/layout/_contact.scss
+++ b/public/stylesheets/sass/layout/_contact.scss
@@ -18,12 +18,11 @@
     &__form {
         display: grid;
         grid-gap: 3rem;
-        padding: 0 20%;
+        width: 60%;
         // justify-items: start;
 
         @media only screen and (max-width: $bp-smallest) {
-            padding: 0% 10%;
-            // justify-content: center;
+            width: 40rem;
         }
 
         input,
