--- a/public/stylesheets/css/style.comp.css
+++ b/public/stylesheets/css/style.comp.css
@@ -288,6 +288,12 @@ body {
   background-color: #f9f7f6;
   margin: 5px; }
 
+.alert-success {
+  width: 100vw;
+  height: 3rem;
+  background-color: #d1fcd1;
+  color: white; }
+
 .header {
   grid-column: full-start / full-end;
   background-image: url(../../resources/img/background.jpg);
@@ -564,10 +570,10 @@ body {
     .contact__form textarea {
       border-radius: 25px;
       padding: 1rem;
-      font-size: 1.6rem;
+      font-size: 1.8rem;
       background-color: rgba(243, 240, 240, 0.863);
       border: none;
-      font-family: Verdana, Geneva, Tahoma, sans-serif; }
+      font-family: 'Courier New', Courier, monospace; }
     .contact__form input {
       height: 5rem; }
   .contact__list {
