--- a/public/stylesheets/sass/layout/_contact.scss
+++ b/public/stylesheets/sass/layout/_contact.scss
@@ -30,10 +30,10 @@
             // justify-self: stretch;
             border-radius: 25px;
             padding: 1rem;
-            font-size: 1.6rem;
+            font-size: 1.8rem;
             background-color: $color-grey-light-2;
             border: none;
-            font-family: Verdana, Geneva, Tahoma, sans-serif;
+            font-family: 'Courier New', Courier, monospace;
         }
         input {
             height: 5rem;
