--- a/public/stylesheets/sass/main.scss
+++ b/public/stylesheets/sass/main.scss
@@ -1,19 +1,19 @@
-@import "abstracts/variables";
+@import 'abstracts/variables';
 
-@import "base/animations";
-@import "base/base";
-@import "base/typography";
-@import "base/utilities";
+@import 'base/animations';
+@import 'base/base';
+@import 'base/typography';
+@import 'base/utilities';
 
-@import "components/navbar";
-@import "components/burger";
+@import 'components/navbar';
+@import 'components/burger';
+@import 'components/alert';
 
-@import "layout/header";
-@import "layout/about";
-@import "layout/skills";
-@import "layout/services";
-@import "layout/projects";
-@import "layout/contact";
-@import "layout/credit";
-@import "layout/footer";
-
+@import 'layout/header';
+@import 'layout/about';
+@import 'layout/skills';
+@import 'layout/services';
+@import 'layout/projects';
+@import 'layout/contact';
+@import 'layout/credit';
+@import 'layout/footer';
