--- a/views/index.ejs
+++ b/views/index.ejs
@@ -48,6 +48,10 @@
             </div>
         </nav>
 
+        <% if(success_message && success_message.length > 0) { %>
+        <div class="alert-success"><%= success_message %></div>
+        <% } %>
+
         <header class="header">
             <h1 class="heading-1 header__content">
                 Hi I am <br />
