--- a/public/stylesheets/sass/components/_navbar.scss
+++ b/public/stylesheets/sass/components/_navbar.scss
@@ -1,58 +1,60 @@
 .navbar {
-	grid-column: full-start / full-end;
-	width: 100%;
-	// height: 100%;
-	// opacity: 1;
-	padding: 0 5rem;
-	position: -webkit-sticky; // for safari browser
-	position: sticky;
-	top: 0;
-	z-index: 20;
-	background-color: rgb(133, 130, 130);		
+    grid-column: full-start / full-end;
+    width: 100%;
+    // height: 100%;
+    // opacity: 1;
+    padding: 0 5rem;
+    position: -webkit-sticky; // for safari browser
+    position: sticky;
+    top: 0;
+    z-index: 20;
+    background-color: rgb(133, 130, 130);
 
-	display: flex;
-	justify-content: space-between;
-	align-items: center;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 
-	&__logo {
-		justify-self: start;
-		color: $color-grey-light-1;
-		font-size: 3.5rem;
-	}
+    &__logo {
+        justify-self: start;
+        color: $color-grey-light-1;
+        font-size: 3.5rem;
+    }
 
-	ul {
-		list-style: none;
-	}
+    ul {
+        list-style: none;
+    }
 
-	&__links {
-		display: flex;
-		width: 30%;
-		justify-content: space-between;
-		
-		@media only screen and (max-width: $bp-large) {
-			background-color: rgb(133, 130, 130);
-			position: absolute;
-			top: 8vh;
-			left: 0;
-			flex-direction: column;
-			display: none;
-			width: 100%;
+    &__links {
+        display: flex;
+        width: 50%;
+        justify-content: space-between;
 
-			li {
-				padding: 3rem 6rem;
-				border-bottom: 1px solid rgb(165, 165, 165);
-			}
-		}
+        @media only screen and (max-width: $bp-large) {
+            background-color: rgb(133, 130, 130);
+            position: absolute;
+            top: 8vh;
+            left: 0;
+            flex-direction: column;
+            display: none;
+            width: 100%;
 
-		a:link, a:visited {
-			text-decoration: none;
-			color: $color-grey-light-1;
-			font-size: 1.5rem;
-			text-transform: uppercase;
-			transition: .1s;
-		}
-		a:hover, a:active {
-			border-bottom: .1rem solid $color-primary;
-		}
-	}
+            li {
+                padding: 3rem 6rem;
+                border-bottom: 1px solid rgb(165, 165, 165);
+            }
+        }
+
+        a:link,
+        a:visited {
+            text-decoration: none;
+            color: $color-grey-light-1;
+            font-size: 1.5rem;
+            text-transform: uppercase;
+            transition: 0.1s;
+        }
+        a:hover,
+        a:active {
+            border-bottom: 0.1rem solid $color-primary;
+        }
+    }
 }
