fixed skills blank issue

--- a/public/stylesheets/css/style.comp.css
+++ b/public/stylesheets/css/style.comp.css
@@ -343,10 +343,12 @@ body {
     padding: 0 10vw;
     display: grid;
     grid-template-columns: repeat(5, 12vw);
+    grid-template-rows: repeat(2, 18rem);
     grid-gap: 3vw; }
     @media only screen and (max-width: 50em) {
       .skills__grid {
-        grid-template-columns: repeat(2, 35vw); } }
+        grid-template-columns: repeat(2, 35vw);
+        grid-template-rows: repeat(5, 18rem); } }
     @media only screen and (max-width: 28.125em) {
       .skills__grid {
         grid-template-columns: repeat(2, 41vw);
